--- a/css/master.css
+++ b/css/master.css
@@ -2,6 +2,8 @@
   width: 70%;
   margin: auto;
   text-align: center;
+  padding-left: 15vw;
+  padding-right: 15vw;
 }
 
 .dice {
@@ -10,15 +12,17 @@
 
 }
 
+
 body {
   background-color: #393E46;
 }
 
 h1 {
   margin: 30px;
+  text-align: center;
   font-family: 'Lobster', cursive;
   text-shadow: 5px 0 #232931;
-  font-size: 7rem;
+  font-size: 15vh;
   color: #4ECCA3;
 }
 
@@ -29,7 +33,7 @@ p {
 }
 
 img {
-  width: 70%;
+  width: 25vh;
 }
 
 footer {
